force-app/main/default/objects/Contact/fields/CDV__c.field-meta.xml
<CustomField>
    <fullName>CDV__c</fullName>
    <inlineHelpText>Segmentation CDV (Cycle de vie) du porteur de la Carte U renseignée dans la fiche de l&apos;internaute connecté.</inlineHelpText>
    <label>Cycle de vie (CDV)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CDV</valueSetName>
    </valueSet>
</CustomField>