force-app/main/default/objects/Contact/fields/CommerceCloudId__c.field-meta.xml
<CustomField>
    <fullName>CommerceCloudId__c</fullName>
    <externalId>true</externalId>
    <label>CommerceCloud Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>