force-app/main/default/objects/Contact/fields/LoyaltyCardID__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCardID__c</fullName>
    <label>Numéro de carte active</label>
    <length>14</length>
    <type>Text</type>
</CustomField>