force-app/main/default/objects/Contact/fields/LoyaltyCreationDate__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCreationDate__c</fullName>
    <inlineHelpText>Date de la première saisie du bulletin d&apos;inscription au programme de fidélité U renseigné dans Claris de la Carte U renseigné dans la fiche de l&apos;internaute connecté.</inlineHelpText>
    <label>Date de création Carte U</label>
    <type>Date</type>
</CustomField>