force-app/main/default/objects/Contact/fields/LoyaltyLastName__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyLastName__c</fullName>
    <label>Nom (FID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>