force-app/main/default/objects/Contact/fields/NewsletterStatus__c.field-meta.xml
<CustomField>
    <fullName>NewsletterStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Souscription Newsletter</label>
    <type>Checkbox</type>
</CustomField>