force-app/main/default/objects/Contact/fields/Quick_Text_Message_2__c.field-meta.xml
<CustomField>
    <fullName>Quick_Text_Message_2__c</fullName>
    <description>Only to be used in quick texts</description>
    <formula>IF(
AND(
TODAY() &gt;= DATE(YEAR(TODAY()),12,27),
TODAY() &lt;= DATE(YEAR(TODAY()),12,31)
),
&quot;! Nous espérons que vous avez passé un bon temps des fêtes!&quot;,
IF(
WEEKDAY(TODAY()) = 2,
&quot;! Nous espérons que vous avez passé un bon week-end!&quot;,
&quot;!&quot;))</formula>
    <label>Quick Text Message 2</label>
    <type>Text</type>
</CustomField>