force-app/main/default/objects/Contact/fields/Quick_Text_Message_3__c.field-meta.xml
<CustomField>
    <fullName>Quick_Text_Message_3__c</fullName>
    <description>Only to be used in quick texts</description>
    <formula>IF(
 ISBLANK(Account.LastActivityDate), &quot;Bonjour&quot;,
IF(
 ISPICKVAL(Salutation, &quot;M.&quot;), &quot;Cher&quot;,
IF(
 ISPICKVAL(Salutation, &quot;Mme&quot;), &quot;Chère&quot;,
&quot;Cher.e&quot;
)))</formula>
    <label>Quick Text Message 3</label>
    <type>Text</type>
</CustomField>