force-app/main/default/objects/Contact/fields/Quick_Text_Message_4__c.field-meta.xml
<CustomField>
    <fullName>Quick_Text_Message_4__c</fullName>
    <description>Only to be used in quick texts (2024)</description>
    <formula>IF( MONTH(TODAY()) = 12,
      &quot; et de très belles fêtes de fin d’année&quot;,
   IF( AND (MONTH(Birthdate) = MONTH(TODAY()), DAY(Birthdate) = DAY(TODAY())), 
         &quot; et un joyeux anniversaire&quot;,
      IF( AND( TODAY() &gt;= DATE(YEAR(TODAY()), 1, 1), TODAY() &lt;= DATE(YEAR(TODAY()), 1, 15)),
            &quot; et nos meilleurs vœux pour l’année&quot; &amp; TEXT(YEAR(TODAY())),
         IF( WEEKDAY(TODAY()) = 6,
            &quot; et un très bon week-end&quot;,
            &quot;&quot;
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Text Message 4</label>
    <type>Text</type>
</CustomField>