force-app/main/default/objects/Contact/fields/Quick_Text_Message__c.field-meta.xml
<CustomField>
    <fullName>Quick_Text_Message__c</fullName>
    <description>Only to be used in quick texts</description>
    <formula>IF(
Birthdate = DATE(YEAR(Birthdate), MONTH(TODAY()), DAY(TODAY())), &quot;et joyeux anniversaire,&quot;,
IF(
Birthdate = DATE(YEAR(Birthdate), MONTH(TODAY()), DAY(TODAY()+1)), &quot;et joyeux anniversaire,&quot;,
IF(
Birthdate = DATE(YEAR(Birthdate), MONTH(TODAY()), DAY(TODAY()+2)), &quot;et joyeux anniversaire,&quot;,
IF(
Birthdate = DATE(YEAR(Birthdate), MONTH(TODAY()), DAY(TODAY()+3)), &quot;et joyeux anniversaire,&quot;,
IF(
Birthdate = DATE(YEAR(Birthdate), MONTH(TODAY()), DAY(TODAY()+4)), &quot;et joyeux anniversaire,&quot;,
IF(
Birthdate = DATE(YEAR(Birthdate), MONTH(TODAY()), DAY(TODAY()+5)), &quot;et joyeux anniversaire,&quot;,
IF(
AND(
TODAY() &gt;= DATE(YEAR(TODAY()),12,23),
TODAY() &lt;= DATE(YEAR(TODAY()),12,27)
),
&quot;et un joyeux Noël,&quot;,
IF(
AND(
TODAY() &gt;= DATE(YEAR(TODAY()),12,29),
TODAY() &lt;= DATE(YEAR(TODAY())+1,1,2)
),
&quot;et une bonne année,&quot;,
IF(
WEEKDAY(TODAY()) = 6,
&quot;et un très bon week-end,&quot;,&quot;et&quot;)))))))))</formula>
    <label>Quick Text Message</label>
    <type>Text</type>
</CustomField>