force-app/main/default/objects/Contact/fields/RFM__c.field-meta.xml
<CustomField>
    <fullName>RFM__c</fullName>
    <inlineHelpText>Segmentation RFM (Récense, Fréquence, Montant) du porteur de la Carte U renseignée dans la fiche de l&apos;internaute connecté.</inlineHelpText>
    <label>Segmentation RFM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM</valueSetName>
    </valueSet>
</CustomField>