force-app/main/default/objects/Contact/fields/SDC__c.field-meta.xml
<CustomField>
    <fullName>SDC__c</fullName>
    <label>Segmentation SDC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SDC</valueSetName>
    </valueSet>
</CustomField>